--- a/source/css/_schemes/Mist/_posts-expand.styl
+++ b/source/css/_schemes/Mist/_posts-expand.styl
@@ -11,7 +11,7 @@
     }
 
     .post-meta {
-      margin: 5px 0 20px 0;
+      margin-bottom: 20px;
     }
   }
 
@@ -20,7 +20,7 @@
   }
 
   .post-block:not(:first-child) {
-    margin-top: 120px;
+    margin-top: 80px;
   }
 
   .post-title, .post-meta {
